<resources>
    <string name="app_name">Cat Translator</string>
    <string name="cat">Cat</string>
    <string name="setting">Settings</string>
    <string name="loading">Loading: %1$d%%</string>
    <string name="welcome">Welcome to Cat Translation</string>
    <string name="intro_1">Enjoy communicating with Cat! App has been demonstrated on pet cats - all cats are satisfied</string>
    <string name="personalization">Personalization</string>
    <string name="intro_2">This will help us choose better translations.</string>
    <string name="make_happy">Make happiness</string>
    <string name="next">Next</string>
    <string name="sound">Sound</string>
    <string name="translate">Translate</string>
    <string name="game">Games</string>
    <string name="song">Songs</string>
    <string name="select_translation">Select translation</string>
    <string name="action_ad">This action can may contains ads</string>
    <string name="clicker">Clicker</string>
    <string name="challenge">Challenge</string>
    <string name="language">Language</string>
    <string name="dog">Dog</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy</string>
    <string name="do_like_app">Do you like this app?</string>
    <string name="hard_work">We work hard and look forward to receiving your appreciation</string>
    <string name="send">Send</string>
    <string name="content_privacy">When you use our services you\'re trusting us with your information We understand this is a big responsibility and work hard to protect your information and put you in control. \n\nThis Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, export, and delete your information</string>
    <string name="select_language">Select language</string>
    <string name="apply">Apply</string>
    <string name="tap_mic">Tap mic to talk</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="close">Close</string>
    <string name="translator_result">Translator result</string>
    <string name="intro_3">All advertising and subscription funds go to help cats</string>
    <string name="c_hello">Hello</string>
    <string name="c_love_you">I love U</string>
    <string name="c_come_here">Come here</string>
    <string name="c_hungry">Hungry</string>
    <string name="c_fine">Fine</string>
    <string name="c_angry">Angry</string>
    <string name="c_no_no">No no</string>
    <string name="c_sad">Sad</string>
    <string name="c_fighting">Fighting</string>
    <string name="c_happy">Happy</string>
    <string name="c_tired">Tired</string>
    <string name="c_sleep">Sleep</string>
    <string name="c_anxious_moan">Anxious Moan</string>
    <string name="c_bass_meow">Bass Meow</string>
    <string name="c_bossy_hiss">Bossy Hiss</string>
    <string name="c_bright_mew">Bright Mew</string>
    <string name="c_cherry_yowl">Cherry Yowl</string>
    <string name="c_crack_meow">Crack Meow</string>
    <string name="c_croaky_chirp">Croaky Chirp</string>
    <string name="c_deep_purring">Deep Purring</string>
    <string name="c_defensive_hiss">Defensive Hiss</string>
    <string name="c_edgy_yowl">Edgy Yowl</string>
    <string name="c_excited_trill">Excited Trill</string>
    <string name="c_feeble_yowl">Feeble Yowl</string>
    <string name="c_fight_hiss">Fight Hiss</string>
    <string name="c_frail_moan">Frail Moan</string>
    <string name="c_friendly_meow">Friendly Meow</string>
    <string name="c_grating_meow">Grating Meow</string>
    <string name="c_growly_meow">Growly Meow</string>
    <string name="c_hateful_yowl">Hateful Yowl</string>
    <string name="c_high_mew">High Mew</string>
    <string name="c_insistent_hiss">Insistent Hiss</string>
    <string name="c_kitten_mew">Kitten Mew</string>
    <string name="c_lilting_purr">Lilting Purr</string>
    <string name="c_long_grunt">Long Grunt</string>
    <string name="c_long_yowls">Long Yowls</string>
    <string name="c_lound_hiss">Lound Hiss</string>
    <string name="c_short_yowl">Short Yowl</string>
    <string name="c_low_purr">Low Purr</string>
    <string name="c_luscious_mew">Luscious Mew</string>
    <string name="c_mawkish_yowl">Mawkish Yowl</string>
    <string name="c_nasally_growl">Nasally Growl</string>
    <string name="c_orotund_meow">Orotund Meow</string>
    <string name="c_pain_meow">Pain Meow</string>
    <string name="c_petulant_yowl">Petulant Yowl</string>
    <string name="c_raspy_meow">Raspy Meow</string>
    <string name="c_scare_chirp_">Scare Chirp </string>
    <string name="c_shrill_meow">Shrill Meow</string>
    <string name="c_snarly_snarl">Snarly Snarl</string>
    <string name="c_snooty_meow">Snooty Meow</string>
    <string name="c_soft_chirp">Soft Chirp</string>
    <string name="c_soft_purr">Soft Purr</string>
    <string name="c_squeak_meow">Squeak Meow</string>
    <string name="c_stressed_purr">Stressed Purr</string>
    <string name="c_sullen_grunt">Sullen Grunt</string>
    <string name="c_sweet_meow">Sweet Meow</string>
    <string name="c_trembling_mew">Trembling Mew</string>
    <string name="c_upbeat_mew">Upbeat Mew</string>
    <string name="c_weak_mew">Weak Mew</string>
    <string name="c_weak_whine">Weak Whine</string>
    <string name="c_whiny_yowl">Whiny Yowl</string>
    <string name="c_lovely_moan">Lovely Moan</string>
    <string name="d_curious">Curious</string>
    <string name="d_lets_play">Let\'s Play</string>
    <string name="d_angry">Angry</string>
    <string name="d_friendly">Friendly</string>
    <string name="d_happy">Happy</string>
    <string name="d_cry">Cry</string>
    <string name="d_agree">Agree</string>
    <string name="d_begging">Begging</string>
    <string name="d_cry_lying">Cry Lying</string>
    <string name="d_dance">Dance</string>
    <string name="d_exhausted">Exhausted</string>
    <string name="d_hand_clap">Hand clap</string>
    <string name="d_happy_cry">Happy cry</string>
    <string name="d_happy_walk">Happy walk</string>
    <string name="d_hi_fence_">Hi fence </string>
    <string name="d_hi">Hi</string>
    <string name="d_lie">Lie</string>
    <string name="d_love">Love</string>
    <string name="d_no">No</string>
    <string name="d_pet">Pet</string>
    <string name="d_raise_hand">Raise hand</string>
    <string name="d_sad">Sad</string>
    <string name="d_scratch">Scratch</string>
    <string name="d_shy">Shy</string>
    <string name="d_soft_angry">Soft angry</string>
    <string name="d_startle">Startle</string>
    <string name="d_super_angry">Super angry</string>
    <string name="d_wonder">Wonder</string>
    <string name="d_wow">Wow</string>
    <string name="d_yeah">Yeah</string>
    <string name="d_yes">Yes</string>
    <string name="d_adoring_chatter">Adoring chatter</string>
    <string name="d_affectionate_barking">Affectionate barking</string>
    <string name="d_affectionate_howl">Affectionate Howl</string>
    <string name="d_affectionate_lick">Affectionate Lick</string>
    <string name="d_affectionate_neigh">Affectionate Neigh</string>
    <string name="d_affectionate_nuzzle">Affectionate Nuzzle</string>
    <string name="d_alert_bark">Alert Bark</string>
    <string name="d_amused_honking">Amused Honking</string>
    <string name="d_amused_roaring">Amused Roaring</string>
    <string name="d_amused_squeak">Amused Squeak</string>
    <string name="d_anxious_howl">Anxious Howl</string>
    <string name="d_blissful_chatter">Blissful Chatter</string>
    <string name="d_cautious_growl">Cautious Growl</string>
    <string name="d_blissful_gobbling">Blissful Gobbling</string>
    <string name="d_blissful_roar">Blissful Roar</string>
    <string name="d_cheerful_growl">Cheerful Growl</string>
    <string name="d_cheerful_quacking">Cheerful Quacking</string>
    <string name="d_confused_yelp">Confused Yelp</string>
    <string name="d_contented_cluck">Contented Cluck</string>
    <string name="d_contented_ruff">Contented Ruff</string>
    <string name="d_curious_sniff">Curious Sniff</string>
    <string name="d_delighted_trilling">Delighted Trilling</string>
    <string name="d_delighted_whistle">Delighted Whistle</string>
    <string name="d_delighted_yelp">Delighted Yelp</string>
    <string name="d_ecstatic_barking">Ecstatic Barking</string>
    <string name="d_eager_pant">Eager Pant</string>
    <string name="d_eager_whine">Eager Whine</string>
    <string name="d_ecstatic_baying">Ecstatic Baying</string>
    <string name="d_ecstatic_peep">Ecstatic Peep</string>
    <string name="d_elated_snuffling">Elated Snuffling</string>
    <string name="d_elated_trill">Elated Trill</string>
    <string name="d_euphoric_crooning">Euphoric Crooning</string>
    <string name="d_excitable_rowing">Excitable Crowing</string>
    <string name="d_excited_chase">Excited Chase</string>
    <string name="d_excited_chirp">Excited Chirp</string>
    <string name="d_excited_woof">Excited Woof</string>
    <string name="d_friendly_greet">Friendly Greet</string>
    <string name="d_frightened_whine">Frightened Whine</string>
    <string name="d_gleeful_coo">Gleeful Coo</string>
    <string name="d_gleeful_squealing">Gleeful Squealing</string>
    <string name="d_grumpy_grumble">Grumpy Grumble</string>
    <string name="d_happy_bark">Happy Bark</string>
    <string name="d_happy_dance">Happy Dance</string>
    <string name="d_happy_wag">Happy Wag</string>
    <string name="d_hopeful_yelp">Hopeful Yelp</string>
    <string name="d_hungry_chew">Hungry Chew</string>
    <string name="d_jealous_hiss">Jealous Hiss</string>
    <string name="d_jovial_mumble">Jovial Mumble</string>
    <string name="d_jovial_squeal">Jovial Squeal</string>
    <string name="d_joyful_howl">Joyful Howl</string>
    <string name="d_jubilant_whinny">Jubilant Whinny</string>
    <string name="d_loving_hoot">Loving Hoot</string>
    <string name="d_loving_hooting">Loving Hooting</string>
    <string name="d_loving_snarl">Loving Snarl</string>
    <string name="d_loving_whimper">Loving Whimper</string>
    <string name="d_merry_trumpeting">Merry Trumpeting</string>
    <string name="d_mournful_sob">Mournful Sob</string>
    <string name="d_nervous_tremor">Nervous Tremor</string>
    <string name="d_overjoyed_purr">Overjoyed Purr</string>
    <string name="d_overjoyed_screech">Overjoyed Screech</string>
    <string name="d_overjoyed_sniveling">Overjoyed Sniveling</string>
    <string name="d_peaceful_snarl">Peaceful Snarl</string>
    <string name="d_playful_bleat">Playful Bleat</string>
    <string name="d_playful_chirping">Playful Chirping</string>
    <string name="d_playful_hiss">Playful Hiss</string>
    <string name="d_playful_nudge">Playful Nudge</string>
    <string name="d_playful_squeak">Playful Squeak</string>
    <string name="d_playful_yip">Playful Yip</string>
    <string name="d_pleased_hiss">Pleased Hiss</string>
    <string name="d_pleased_rumbling">Pleased Rumbling</string>
    <string name="d_relaxed_purr">Relaxed Purr</string>
    <string name="d_satisfied_grunt">Satisfied Grunt</string>
    <string name="d_sleepy_sign">Sleepy Sign</string>
    <string name="d_thankful_whistle">Thankful Whistle</string>
    <string name="d_thirsty_lap">Thirsty Lap</string>
    <string name="d_thrilled_braying">Thrilled Braying</string>
    <string name="d_trusting_whuff">Trusting Whuff</string>
    <string name="d_upbeat_whickering">Upbeat Whickering</string>
    <string name="challenge_1">Play this sound to call your cat 1</string>
    <string name="challenge_2">Play this sound to call your cat 2</string>
    <string name="challenge_3">Play this sound to freak your cat out</string>
    <string name="r_69">Free translation</string>
</resources>